# airbnb-snowflake-dbt-pipeline

./: .gitignore  README.md  pyproject.toml
aws_dbt_snowflake_project/: ExampleProfiles.yml
